# dotfiles

./: .chezmoiexternal.toml  .chezmoiignore  .envrc  .pre-commit-config.yaml  .prettierignore  Brewfile  Makefile  README.md  XDG_NOTES.md  dot_fzf.zsh  dot_gitconfig  dot_gitconfig-mabyduck  dot_gitconfig.local.example  dot_gitignore_global  dot_inputrc  dot_markdownlint.toml  dot_prettierrc.toml  dot_tmux.conf  dot_zprofile  dot_zshenv  dot_zshrc  package.json  pnpm-lock.yaml  pyproject.toml  setup.sh
.chezmoidata/: packages.yaml
.chezmoiscripts/: run_after_80-build-neovim.sh  run_after_80-build-neovim.sh.tmpl  run_after_85-build-nvim-env.sh.tmpl  run_once_add_dmgs.sh.tmpl  run_once_build-lua.sh  run_once_build-rust.sh  run_onchange_after_90-rebuild-bat-cache.sh.tmpl  run_onchange_before_10-install-packages.sh.tmpl
.gemini/: settings.json
dot_config/: symlink_docker.tmpl
dot_config/exact_nvim/data/virtualenvs/python/: pyproject.toml
dot_config/exact_nvim/lua/django-orm-analyzer/: .gitignore  README.md  core.lua  django_parser.py  init.lua  pyproject.toml  ui.lua
dot_config/exact_nvim/lua/django-orm-analyzer/django_orm_analyzer/: __init__.py  analyzer.py  apps.py  middleware.py  parser.py
dot_config/exact_nvim/lua/django-orm-analyzer/django_orm_analyzer/templates/django_orm_analyzer/: panel.html
dot_config/exact_nvim/lua/django-orm-analyzer/tests/: __init__.py  test_analyzer.py  test_middleware.py  test_parser.py
dot_ssh/: config.tmpl  id_ed25519.pub.tmpl  once_private_id_ed25519.tmpl
git/: .gitconfig
scripts/: build-neovim.sh  install-packages.sh  normalize-stow-links.py  vset.sh
tmux/: .tmux.conf
zsh/: .zshrc
(+121 files in other folders)
