[project]
name = "nvim"
version = "0.1.0"
description = "Neovim Python provider environment"
authors = [
    { name = "William Blackie", email = "will@developerfy.com" }
]
requires-python = ">=3.12,<3.13"
dependencies = [
    "pip>=26.0",
    "pynvim>=0.5.2",
]

[build-system]
requires = ["uv_build>=0.8.18,<0.9.0"]
build-backend = "uv_build"
